add start layout and favicon

--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
-    
+    <section class="hero">
+        <header class="header"></header>
+        <div class="hero__wrapper">
+            <h1 class="section-title">Alexa Rise</h1>
+        </div>
+    </section>
+    <main class="main">
+        <div class="container">
+            <section class="skills">
+                <h2 class="section-title"></h2>
+            </section>
+            <section class="portfolio">
+                <h2 class="section-title"></h2>
+            </section>
+            <section class="video">
+                <h2 class="section-title"></h2>
+            </section>
+            <section class="price">
+                <h2 class="section-title"></h2>
+            </section>
+            <section class="contacts">
+                <h2 class="section-title"></h2>
+            </section>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container"></div>
+    </footer>
 </body>
 </html>
