--- a/index.html
+++ b/index.html
@@ -9,32 +9,150 @@
 </head>
 <body>
     <section class="hero">
-        <header class="header"></header>
+        <header class="header">
+            <div class="container">
+                <div class="logo"></div>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+                        <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+                        <li class="nav__item"><a href="#video" class="nav__link">Video</a></li>
+                        <li class="nav__item"><a href="#price" class="nav__link">Price</a></li>
+                        <li class="nav__item"><a href="#contacts" class="nav__link">Contacts</a></li>
+                    </ul>
+                </nav>
+                <div class="languages">
+                    <span class="languages__item">en</span>
+                    <span class="languages__item languages__item_delimiter">/</span>
+                    <span class="languages__item">ru</span>
+                </div>
+            </div>
+        </header>
         <div class="hero__wrapper">
-            <h1 class="section-title">Alexa Rise</h1>
+            <h1 class="hero__title">Alexa Rise</h1>
+            <p class="hero__subtitle">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+            <button class="button" type="button">Hire me</button>
         </div>
     </section>
     <main class="main">
         <div class="container">
-            <section class="skills">
-                <h2 class="section-title"></h2>
+            <section class="skills" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <div class="skills__inner">
+                    <div class="skill">
+                        <p class="skill__title">Digital photography</p>
+                        <p>High-quality photos in the studio and on the nature</p>
+                    </div>
+                    <div class="skill">
+                        <p class="skill__title">Video shooting</p>
+                        <p>Capture your moments so that they always stay with you</p>
+                    </div>
+                    <div class="skill">
+                        <p class="skill__title">Retouch</p>
+                        <p>I strive to make photography surpass reality</p>
+                    </div>
+                    <div class="skill">
+                        <p class="skill__title">Audio</p>
+                        <p>Professional sounds recording for video, advertising, portfolio</p>
+                    </div>
+                </div>
             </section>
-            <section class="portfolio">
-                <h2 class="section-title"></h2>
+            <section class="portfolio" id="portfolio">
+                <h2 class="section-title">Portfolio</h2>
+                <div class="portfolio__inner">
+                    <div class="portfolio__buttons">
+                        <button class="button" type="button">Winter</button>
+                        <button class="button" type="button">Spring</button>
+                        <button class="button" type="button">Summer</button>
+                        <button class="button button_active" type="button">Autumn</button>
+                    </div>
+                    <div class="portfolio__photos">
+                        <img src="images/portfolio-img.jpg" alt="photo" class="photo">
+                        <img src="images/portfolio-img-2.jpg" alt="photo" class="photo">
+                        <img src="images/portfolio-img-3.jpg" alt="photo" class="photo">
+                        <img src="images/portfolio-img-4.jpg" alt="photo" class="photo">
+                        <img src="images/portfolio-img-5.jpg" alt="photo" class="photo">
+                        <img src="images/portfolio-img-6.jpg" alt="photo" class="photo">
+                    </div>
+                </div>
             </section>
-            <section class="video">
-                <h2 class="section-title"></h2>
+            <section class="video" id="video">
+                <h2 class="section-title">Video</h2>
+                <div class="player">
+                    <button class="player__button" type="button"></button>
+                </div>
             </section>
-            <section class="price">
-                <h2 class="section-title"></h2>
+            <section class="price" id="price">
+                <h2 class="section-title">Price</h2>
+                <div class="price__inner">
+                    <div class="price-block">
+                        <h3 class="price-block__title">Standard</h3>
+                        <p class="price-block__price">500 $</p>
+                        <p class="price-block__info">
+                            <span class="price-block__text">One location</span>
+                            <span class="price-block__text">120 photos in color</span>
+                            <span class="price-block__text">12 photos in retouch</span>
+                            <span class="price-block__text">Readiness 2-3 weeks</span>
+                            <span class="price-block__text">Make up, visage</span>
+                        </p>
+                        <button class="button" type="button">Order shooting</button>
+                    </div>
+                    <div class="price-block">
+                        <h3 class="price-block__title">Premium</h3>
+                        <p class="price-block__price">700 $</p>
+                        <p class="price-block__info">
+                            <span class="price-block__text">One or two locations</span>
+                            <span class="price-block__text">200 photos in color</span>
+                            <span class="price-block__text">20 photos in retouch</span>
+                            <span class="price-block__text">Readiness 1-2 weeks</span>
+                            <span class="price-block__text">Make up, visage</span>
+                        </p>
+                        <button class="button" type="button">Order shooting</button>
+                    </div>
+                    <div class="price-block">
+                        <h3 class="price-block__title">Gold</h3>
+                        <p class="price-block__price">1000 $</p>
+                        <p class="price-block__info">
+                            <span class="price-block__text">Three locations or more</span>
+                            <span class="price-block__text">300 photos in color</span>
+                            <span class="price-block__text">50 photos in retouch</span>
+                            <span class="price-block__text">Readiness 1 week</span>
+                            <span class="price-block__text">Make up, visage, hairstyle</span>
+                        </p>
+                        <button class="button" type="button">Order shooting</button>
+                    </div>
+                </div>
             </section>
-            <section class="contacts">
-                <h2 class="section-title"></h2>
+            <section class="contacts" id="contacts"> 
+                <div class="contact__inner">
+                    <h2 class="contact__title">Contact me</h2>
+                </div>               
+                <form class="form" method="post">                    
+                    <input type="email" class="form__field" placeholder="E-mail">
+                    <input type="tel" class="form__field" placeholder="Phone">
+                    <textarea class="form__field form__field_textarea" placeholder="Message"></textarea>
+                    <button class="button" type="submit">Send message</button>
+                </form>
             </section>
         </div>
     </main>
     <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__block">
+                    © 2022 <a href="https://github.com/estydaven" class="footer__link">github</a>                    
+                </div>
+                <div class="footer__block">
+                    <a href="https://rs.school/js-stage0/" class="footer__link">Rolling Scopes School</a> 
+                </div>
+                <ul class="socials">
+                    <li class="socials__item"><a href="" class="socials__link socials__link_inst"></a></li>
+                    <li class="socials__item"><a href="" class="socials__link socials__link_fb"></a></li>
+                    <li class="socials__item"><a href="" class="socials__link socials__link_tw"></a></li>
+                    <li class="socials__item"><a href="" class="socials__link socials__link_pin"></a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
