--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <section class="hero">
-        <header class="header">
-            <div class="container">
+        <div class="container">
+            <header class="header">
                 <div class="logo"></div>
                 <nav class="nav">
                     <ul class="nav__list">
@@ -26,18 +27,20 @@
                     <span class="languages__item languages__item_delimiter">/</span>
                     <span class="languages__item">ru</span>
                 </div>
+            </header>
+            <div class="hero__wrapper">
+                <h1 class="hero__title">Alexa Rise</h1>
+                <p class="hero__subtitle">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+                <button class="button" type="button">Hire me</button>
             </div>
-        </header>
-        <div class="hero__wrapper">
-            <h1 class="hero__title">Alexa Rise</h1>
-            <p class="hero__subtitle">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
-            <button class="button" type="button">Hire me</button>
         </div>
     </section>
     <main class="main">
         <div class="container">
             <section class="skills" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <div class="title-wrap">
+                    <h2 class="section-title">Skills</h2>
+                </div>
                 <div class="skills__inner">
                     <div class="skill">
                         <p class="skill__title">Digital photography</p>
@@ -58,13 +61,15 @@
                 </div>
             </section>
             <section class="portfolio" id="portfolio">
-                <h2 class="section-title">Portfolio</h2>
+                <div class="title-wrap">
+                    <h2 class="section-title">Portfolio</h2>
+                </div>
                 <div class="portfolio__inner">
                     <div class="portfolio__buttons">
-                        <button class="button" type="button">Winter</button>
-                        <button class="button" type="button">Spring</button>
-                        <button class="button" type="button">Summer</button>
-                        <button class="button button_active" type="button">Autumn</button>
+                        <button class="button button_portfolio" type="button">Winter</button>
+                        <button class="button button_portfolio" type="button">Spring</button>
+                        <button class="button button_portfolio" type="button">Summer</button>
+                        <button class="button active" type="button">Autumn</button>
                     </div>
                     <div class="portfolio__photos">
                         <img src="images/portfolio-img.jpg" alt="photo" class="photo">
@@ -77,13 +82,17 @@
                 </div>
             </section>
             <section class="video" id="video">
-                <h2 class="section-title">Video</h2>
+                <div class="title-wrap">
+                    <h2 class="section-title">Video</h2>
+                </div>
                 <div class="player">
                     <button class="player__button" type="button"></button>
                 </div>
             </section>
             <section class="price" id="price">
-                <h2 class="section-title">Price</h2>
+                <div class="title-wrap">
+                    <h2 class="section-title">Price</h2>
+                </div>
                 <div class="price__inner">
                     <div class="price-block">
                         <h3 class="price-block__title">Standard</h3>
