add desktop styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </ul>
                 </nav>
                 <div class="languages">
-                    <span class="languages__item">en</span>
+                    <span class="languages__item languages__item_active">en</span>
                     <span class="languages__item languages__item_delimiter">/</span>
                     <span class="languages__item">ru</span>
                 </div>
@@ -31,45 +31,45 @@
             <div class="hero__wrapper">
                 <h1 class="hero__title">Alexa Rise</h1>
                 <p class="hero__subtitle">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
-                <button class="button" type="button">Hire me</button>
+                <button class="button" type="button"><span class="button__text">Hire me</span></button>
             </div>
         </div>
     </section>
     <main class="main">
         <div class="container">
-            <section class="skills" id="skills">
+            <section class="skills section" id="skills">
                 <div class="title-wrap">
                     <h2 class="section-title">Skills</h2>
                 </div>
                 <div class="skills__inner">
                     <div class="skill">
                         <p class="skill__title">Digital photography</p>
-                        <p>High-quality photos in the studio and on the nature</p>
+                        <p class="skill__text">High-quality photos in the studio and on the nature</p>
                     </div>
                     <div class="skill">
                         <p class="skill__title">Video shooting</p>
-                        <p>Capture your moments so that they always stay with you</p>
+                        <p class="skill__text">Capture your moments so that they always stay with you</p>
                     </div>
                     <div class="skill">
                         <p class="skill__title">Retouch</p>
-                        <p>I strive to make photography surpass reality</p>
+                        <p class="skill__text">I strive to make photography surpass reality</p>
                     </div>
                     <div class="skill">
                         <p class="skill__title">Audio</p>
-                        <p>Professional sounds recording for video, advertising, portfolio</p>
+                        <p class="skill__text">Professional sounds recording for video, advertising, portfolio</p>
                     </div>
                 </div>
             </section>
-            <section class="portfolio" id="portfolio">
+            <section class="portfolio section" id="portfolio">
                 <div class="title-wrap">
                     <h2 class="section-title">Portfolio</h2>
                 </div>
                 <div class="portfolio__inner">
                     <div class="portfolio__buttons">
-                        <button class="button button_portfolio" type="button">Winter</button>
-                        <button class="button button_portfolio" type="button">Spring</button>
-                        <button class="button button_portfolio" type="button">Summer</button>
-                        <button class="button active" type="button">Autumn</button>
+                        <button class="portfolio__button" type="button">Winter</button>
+                        <button class="portfolio__button" type="button">Spring</button>
+                        <button class="portfolio__button" type="button">Summer</button>
+                        <button class="portfolio__button portfolio__button_active" type="button">Autumn</button>
                     </div>
                     <div class="portfolio__photos">
                         <img src="images/portfolio-img.jpg" alt="photo" class="photo">
@@ -81,15 +81,16 @@
                     </div>
                 </div>
             </section>
-            <section class="video" id="video">
+            <section class="video section" id="video">
                 <div class="title-wrap">
                     <h2 class="section-title">Video</h2>
                 </div>
                 <div class="player">
+                    <img src="images/video-player.jpg" alt="" class="player__cover">
                     <button class="player__button" type="button"></button>
                 </div>
             </section>
-            <section class="price" id="price">
+            <section class="price section" id="price">
                 <div class="title-wrap">
                     <h2 class="section-title">Price</h2>
                 </div>
@@ -104,7 +105,7 @@
                             <span class="price-block__text">Readiness 2-3 weeks</span>
                             <span class="price-block__text">Make up, visage</span>
                         </p>
-                        <button class="button" type="button">Order shooting</button>
+                        <button class="button" type="button"><span class="button__text">Order shooting</span></button>
                     </div>
                     <div class="price-block">
                         <h3 class="price-block__title">Premium</h3>
@@ -116,7 +117,7 @@
                             <span class="price-block__text">Readiness 1-2 weeks</span>
                             <span class="price-block__text">Make up, visage</span>
                         </p>
-                        <button class="button" type="button">Order shooting</button>
+                        <button class="button" type="button"><span class="button__text">Order shooting</span></button>
                     </div>
                     <div class="price-block">
                         <h3 class="price-block__title">Gold</h3>
@@ -128,22 +129,24 @@
                             <span class="price-block__text">Readiness 1 week</span>
                             <span class="price-block__text">Make up, visage, hairstyle</span>
                         </p>
-                        <button class="button" type="button">Order shooting</button>
+                        <button class="button" type="button"><span class="button__text">Order shooting</span></button>
                     </div>
                 </div>
             </section>
-            <section class="contacts" id="contacts"> 
+        </div>
+        <section class="contacts" id="contacts">
+            <div class="container">
                 <div class="contact__inner">
                     <h2 class="contact__title">Contact me</h2>
-                </div>               
-                <form class="form" method="post">                    
-                    <input type="email" class="form__field" placeholder="E-mail">
-                    <input type="tel" class="form__field" placeholder="Phone">
-                    <textarea class="form__field form__field_textarea" placeholder="Message"></textarea>
-                    <button class="button" type="submit">Send message</button>
-                </form>
-            </section>
-        </div>
+                    <form class="form" method="post">                    
+                        <input type="email" class="form__field" placeholder="E-mail">
+                        <input type="tel" class="form__field" placeholder="Phone">
+                        <textarea class="form__field form__field_textarea" placeholder="Message"></textarea>
+                        <button class="button" type="submit"><span class="button__text">Send message</span></button>
+                    </form>
+                </div> 
+            </div> 
+        </section>        
     </main>
     <footer class="footer">
         <div class="container">
