add tablet styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                     <span class="languages__item languages__item_delimiter">/</span>
                     <span class="languages__item">ru</span>
                 </div>
+                <div class="burger">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                </div>
             </header>
             <div class="hero__wrapper">
                 <h1 class="hero__title">Alexa Rise</h1>
@@ -142,7 +147,7 @@
                         <input type="email" class="form__field" placeholder="E-mail">
                         <input type="tel" class="form__field" placeholder="Phone">
                         <textarea class="form__field form__field_textarea" placeholder="Message"></textarea>
-                        <button class="button" type="submit"><span class="button__text">Send message</span></button>
+                        <button class="button button_contacts" type="submit"><span class="button__text">Send message</span></button>
                     </form>
                 </div> 
             </div> 
