add function of change portfolio images

--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                 </div>
                 <div class="portfolio__inner">
                     <div class="portfolio__buttons">
-                        <button class="portfolio__button" type="button">Winter</button>
-                        <button class="portfolio__button" type="button">Spring</button>
-                        <button class="portfolio__button" type="button">Summer</button>
-                        <button class="portfolio__button portfolio__button_active" type="button">Autumn</button>
+                        <button class="portfolio__button" type="button" data-season="winter">Winter</button>
+                        <button class="portfolio__button" type="button" data-season="spring">Spring</button>
+                        <button class="portfolio__button" type="button" data-season="summer">Summer</button>
+                        <button class="portfolio__button portfolio__button_active" type="button" data-season="autumn">Autumn</button>
                     </div>
                     <div class="portfolio__photos">
-                        <img src="images/portfolio-img.jpg" alt="photo" class="photo">
-                        <img src="images/portfolio-img-2.jpg" alt="photo" class="photo">
-                        <img src="images/portfolio-img-3.jpg" alt="photo" class="photo">
-                        <img src="images/portfolio-img-4.jpg" alt="photo" class="photo">
-                        <img src="images/portfolio-img-5.jpg" alt="photo" class="photo">
-                        <img src="images/portfolio-img-6.jpg" alt="photo" class="photo">
+                        <img src="images/autumn/1.jpg" alt="photo" class="photo">
+                        <img src="images/autumn/2.jpg" alt="photo" class="photo">
+                        <img src="images/autumn/3.jpg" alt="photo" class="photo">
+                        <img src="images/autumn/4.jpg" alt="photo" class="photo">
+                        <img src="images/autumn/5.jpg" alt="photo" class="photo">
+                        <img src="images/autumn/6.jpg" alt="photo" class="photo">
                     </div>
                 </div>
             </section>
