--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
                 <div class="logo"></div>
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
-                        <li class="nav__item"><a href="#video" class="nav__link">Video</a></li>
-                        <li class="nav__item"><a href="#price" class="nav__link">Price</a></li>
-                        <li class="nav__item"><a href="#contacts" class="nav__link">Contacts</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link" data-i18="skills">Skills</a></li>
+                        <li class="nav__item"><a href="#portfolio" class="nav__link" data-i18="portfolio">Portfolio</a></li>
+                        <li class="nav__item"><a href="#video" class="nav__link" data-i18="video">Video</a></li>
+                        <li class="nav__item"><a href="#price" class="nav__link" data-i18="price">Price</a></li>
+                        <li class="nav__item"><a href="#contacts" class="nav__link" data-i18="contacts">Contacts</a></li>
                     </ul>
                 </nav>
                 <div class="languages">
-                    <span class="languages__item languages__item_active">en</span>
+                    <span class="languages__item languages__item_en languages__item_active">en</span>
                     <span class="languages__item languages__item_delimiter">/</span>
-                    <span class="languages__item">ru</span>
+                    <span class="languages__item languages__item_ru">ru</span>
                 </div>
                 <div class="burger">
                     <span class="burger__line"></span>
@@ -34,9 +34,9 @@
                 </div>
             </header>
             <div class="hero__wrapper">
-                <h1 class="hero__title">Alexa Rise</h1>
-                <p class="hero__subtitle">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
-                <button class="button" type="button"><span class="button__text">Hire me</span></button>
+                <h1 class="hero__title" data-i18="hero-title">Alexa Rise</h1>
+                <p class="hero__subtitle" data-i18="hero-text">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+                <button class="button" type="button"><span class="button__text" data-i18="hire">Hire me</span></button>
             </div>
         </div>
     </section>
@@ -44,37 +44,37 @@
         <div class="container">
             <section class="skills section" id="skills">
                 <div class="title-wrap">
-                    <h2 class="section-title">Skills</h2>
+                    <h2 class="section-title" data-i18="skills">Skills</h2>
                 </div>
                 <div class="skills__inner">
                     <div class="skill">
-                        <p class="skill__title">Digital photography</p>
-                        <p class="skill__text">High-quality photos in the studio and on the nature</p>
+                        <p class="skill__title" data-i18="skill-title-1">Digital photography</p>
+                        <p class="skill__text" data-i18="skill-text-1">High-quality photos in the studio and on the nature</p>
                     </div>
                     <div class="skill">
-                        <p class="skill__title">Video shooting</p>
-                        <p class="skill__text">Capture your moments so that they always stay with you</p>
+                        <p class="skill__title" data-i18="skill-title-2">Video shooting</p>
+                        <p class="skill__text" data-i18="skill-text-2">Capture your moments so that they always stay with you</p>
                     </div>
                     <div class="skill">
-                        <p class="skill__title">Retouch</p>
-                        <p class="skill__text">I strive to make photography surpass reality</p>
+                        <p class="skill__title" data-i18="skill-title-3">Retouch</p>
+                        <p class="skill__text" data-i18="skill-text-3">I strive to make photography surpass reality</p>
                     </div>
                     <div class="skill">
-                        <p class="skill__title">Audio</p>
-                        <p class="skill__text">Professional sounds recording for video, advertising, portfolio</p>
+                        <p class="skill__title" data-i18="skill-title-4">Audio</p>
+                        <p class="skill__text" data-i18="skill-text-4">Professional sounds recording for video, advertising, portfolio</p>
                     </div>
                 </div>
             </section>
             <section class="portfolio section" id="portfolio">
                 <div class="title-wrap">
-                    <h2 class="section-title">Portfolio</h2>
+                    <h2 class="section-title" data-i18="portfolio">Portfolio</h2>
                 </div>
                 <div class="portfolio__inner">
                     <div class="portfolio__buttons">
-                        <button class="portfolio__button" type="button" data-season="winter">Winter</button>
-                        <button class="portfolio__button" type="button" data-season="spring">Spring</button>
-                        <button class="portfolio__button" type="button" data-season="summer">Summer</button>
-                        <button class="portfolio__button portfolio__button_active" type="button" data-season="autumn">Autumn</button>
+                        <button class="portfolio__button" type="button" data-season="winter" data-i18="winter">Winter</button>
+                        <button class="portfolio__button" type="button" data-season="spring" data-i18="spring">Spring</button>
+                        <button class="portfolio__button" type="button" data-season="summer" data-i18="summer">Summer</button>
+                        <button class="portfolio__button portfolio__button_active" type="button" data-season="autumn" data-i18="autumn">Autumn</button>
                     </div>
                     <div class="portfolio__photos">
                         <img src="images/autumn/1.jpg" alt="photo" class="photo">
@@ -88,7 +88,7 @@
             </section>
             <section class="video section" id="video">
                 <div class="title-wrap">
-                    <h2 class="section-title">Video</h2>
+                    <h2 class="section-title" data-i18="video">Video</h2>
                 </div>
                 <div class="player">
                     <img src="images/video-player.jpg" alt="" class="player__cover">
@@ -97,44 +97,44 @@
             </section>
             <section class="price section" id="price">
                 <div class="title-wrap">
-                    <h2 class="section-title">Price</h2>
+                    <h2 class="section-title" data-i18="price">Price</h2>
                 </div>
                 <div class="price__inner">
                     <div class="price-block">
-                        <h3 class="price-block__title">Standard</h3>
+                        <h3 class="price-block__title" data-i18="">Standard</h3>
                         <p class="price-block__price">500 $</p>
                         <p class="price-block__info">
-                            <span class="price-block__text">One location</span>
-                            <span class="price-block__text">120 photos in color</span>
-                            <span class="price-block__text">12 photos in retouch</span>
-                            <span class="price-block__text">Readiness 2-3 weeks</span>
-                            <span class="price-block__text">Make up, visage</span>
+                            <span class="price-block__text" data-i18="price-description-1-span-1">One location</span>
+                            <span class="price-block__text" data-i18="price-description-1-span-2">120 photos in color</span>
+                            <span class="price-block__text" data-i18="price-description-1-span-3">12 photos in retouch</span>
+                            <span class="price-block__text" data-i18="price-description-1-span-4">Readiness 2-3 weeks</span>
+                            <span class="price-block__text" data-i18="price-description-1-span-5">Make up, visage</span>
                         </p>
-                        <button class="button" type="button"><span class="button__text">Order shooting</span></button>
+                        <button class="button" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
                     </div>
                     <div class="price-block">
-                        <h3 class="price-block__title">Premium</h3>
+                        <h3 class="price-block__title" data-i18="">Premium</h3>
                         <p class="price-block__price">700 $</p>
                         <p class="price-block__info">
-                            <span class="price-block__text">One or two locations</span>
-                            <span class="price-block__text">200 photos in color</span>
-                            <span class="price-block__text">20 photos in retouch</span>
-                            <span class="price-block__text">Readiness 1-2 weeks</span>
-                            <span class="price-block__text">Make up, visage</span>
+                            <span class="price-block__text" data-i18="price-description-2-span-1">One or two locations</span>
+                            <span class="price-block__text" data-i18="price-description-2-span-2">200 photos in color</span>
+                            <span class="price-block__text" data-i18="price-description-2-span-3">20 photos in retouch</span>
+                            <span class="price-block__text" data-i18="price-description-2-span-4">Readiness 1-2 weeks</span>
+                            <span class="price-block__text" data-i18="price-description-2-span-5">Make up, visage</span>
                         </p>
-                        <button class="button" type="button"><span class="button__text">Order shooting</span></button>
+                        <button class="button" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
                     </div>
                     <div class="price-block">
-                        <h3 class="price-block__title">Gold</h3>
+                        <h3 class="price-block__title" data-i18="">Gold</h3>
                         <p class="price-block__price">1000 $</p>
                         <p class="price-block__info">
-                            <span class="price-block__text">Three locations or more</span>
-                            <span class="price-block__text">300 photos in color</span>
-                            <span class="price-block__text">50 photos in retouch</span>
-                            <span class="price-block__text">Readiness 1 week</span>
-                            <span class="price-block__text">Make up, visage, hairstyle</span>
+                            <span class="price-block__text" data-i18="price-description-3-span-1">Three locations or more</span>
+                            <span class="price-block__text" data-i18="price-description-3-span-2">300 photos in color</span>
+                            <span class="price-block__text" data-i18="price-description-3-span-3">50 photos in retouch</span>
+                            <span class="price-block__text" data-i18="price-description-3-span-4">Readiness 1 week</span>
+                            <span class="price-block__text" data-i18="price-description-3-span-5">Make up, visage, hairstyle</span>
                         </p>
-                        <button class="button" type="button"><span class="button__text">Order shooting</span></button>
+                        <button class="button" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
                     </div>
                 </div>
             </section>
@@ -142,12 +142,12 @@
         <section class="contacts" id="contacts">
             <div class="container">
                 <div class="contact__inner">
-                    <h2 class="contact__title">Contact me</h2>
+                    <h2 class="contact__title" data-i18="contact-me">Contact me</h2>
                     <form class="form" method="post">                    
                         <input type="email" class="form__field" placeholder="E-mail">
                         <input type="tel" class="form__field" placeholder="Phone">
                         <textarea class="form__field form__field_textarea" placeholder="Message"></textarea>
-                        <button class="button button_contacts" type="submit"><span class="button__text">Send message</span></button>
+                        <button class="button button_contacts" type="submit"><span class="button__text" data-i18="send-message">Send message</span></button>
                     </form>
                 </div> 
             </div> 
