finished translation script

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                     <h2 class="contact__title" data-i18="contact-me">Contact me</h2>
                     <form class="form" method="post">                    
                         <input type="email" class="form__field" placeholder="E-mail">
-                        <input type="tel" class="form__field" placeholder="Phone">
-                        <textarea class="form__field form__field_textarea" placeholder="Message"></textarea>
+                        <input type="tel" class="form__field" placeholder="Phone" data-i18="phone">
+                        <textarea class="form__field form__field_textarea" placeholder="Message" data-i18="message"></textarea>
                         <button class="button button_contacts" type="submit"><span class="button__text" data-i18="send-message">Send message</span></button>
                     </form>
                 </div> 
