add script fot change light/dark theme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="body">
     <section class="hero">
         <div class="container">
             <header class="header">
@@ -27,6 +27,7 @@
                     <span class="languages__item languages__item_delimiter">/</span>
                     <span class="languages__item languages__item_ru">ru</span>
                 </div>
+                <div class="theme-image"></div>
                 <div class="burger">
                     <span class="burger__line"></span>
                     <span class="burger__line"></span>
@@ -110,7 +111,7 @@
                             <span class="price-block__text" data-i18="price-description-1-span-4">Readiness 2-3 weeks</span>
                             <span class="price-block__text" data-i18="price-description-1-span-5">Make up, visage</span>
                         </p>
-                        <button class="button" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
+                        <button class="button button_light" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
                     </div>
                     <div class="price-block">
                         <h3 class="price-block__title" data-i18="">Premium</h3>
@@ -122,7 +123,7 @@
                             <span class="price-block__text" data-i18="price-description-2-span-4">Readiness 1-2 weeks</span>
                             <span class="price-block__text" data-i18="price-description-2-span-5">Make up, visage</span>
                         </p>
-                        <button class="button" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
+                        <button class="button button_light" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
                     </div>
                     <div class="price-block">
                         <h3 class="price-block__title" data-i18="">Gold</h3>
@@ -134,7 +135,7 @@
                             <span class="price-block__text" data-i18="price-description-3-span-4">Readiness 1 week</span>
                             <span class="price-block__text" data-i18="price-description-3-span-5">Make up, visage, hairstyle</span>
                         </p>
-                        <button class="button" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
+                        <button class="button button_light" type="button"><span class="button__text" data-i18="order">Order shooting</span></button>
                     </div>
                 </div>
             </section>
