--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="body">
+<body>
     <section class="hero">
         <div class="container">
             <header class="header">
