--- a/index.html
+++ b/index.html
@@ -92,8 +92,23 @@
                     <h2 class="section-title" data-i18="video">Video</h2>
                 </div>
                 <div class="player">
-                    <img src="images/video-player.jpg" alt="" class="player__cover">
-                    <button class="player__button" type="button"></button>
+                    <div class="player__cover"></div>
+                    <video src="video/video.mp4" class="player__video viewer"></video>
+                    <button class="player__btn" type="button"></button>
+                    <div class="player__controls">
+                        <div class="player__buttons">
+                            <button data-skip="-10" class="player__button player__button_past"></button>                            
+                            <button class="player__button play-icon toggle" title="Toggle Play"></button>
+                            <button data-skip="10" class="player__button player__button_forward"></button>
+                        </div>                        
+                        <input type="range" name="progress" class="progress" min="0" max="100" step="1" value="0">
+                        <button class="player__button volume-icon vol" title="Volume Play"></button>
+                        <input type="range" name="volume" class="volume" min="0" max="1" step="0.04" value="1">
+                        <div class="timers">
+                            <span class="timer">00:00</span>
+                            <span class="timer-end">00:00</span>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="price section" id="price">
