--- a/index.html
+++ b/index.html
@@ -219,6 +219,6 @@
             </form>
         </div>
     </div>
-    <script src="js/main.js"></script>    
+    <script type="module" src="index.js"></script>    
 </body>
 </html>
